
	* phonebook: bei ausgehenden Anrufen (von NT) die angerufene Nummer
	nachschlagen und nicht die eigene (Dank an tzhs)

	* callmonitor: Auch die Variable NT ist nun für die Listener
	verfügbar.

2005-12-10

	* telefon: Neues Paket zur Verwaltung von telefon abgetrennt; telfifo
	erlaubt die Registrierung mehrerer Leser der Ausgabe von telefon

	* telefon: Ungepufferte Ausgabe (Dank an Harald): "telefon 1"

2005-12-17

	* rc.callmonitor: Vorhandensein des telefon-Pakets überprüfen
	* callmonitor.cgi: Debug-Modus über Web-Oberfläche einstellbar

2006-01-01

	* Makefile: Neue Paket-Konvention für ds-0.2 (./root, ./docs)
	* dboxpopup, dboxmessage: Standardnachricht in UTF-8 mit
	Zeilenwechseln statt Kommas (Dank an IngoB)
	* phonebook: Rückwärtssuche ohne Caching möglich (Dank an mode)
	* maint.cgi: Wartungsseite zum Aufräumen des Telefonbuchs
	* phonebook: Löschen von Einträgen (phonebook remove <id>)

	callmonitor-0.5 veröffentlicht

	* controller: Controller mit den gemeinsamen Initialisierungen
	(system.cfg, ...), der dann Applets aufruft

	* phonebook: Argumente prüfen: "phonebook get" hinterließ einen leeren
	Eintrag im Telefonbuch.

	* shstrip: Kommentare beim Zusammenpacken für die Box entfernen

	* callmonitor: Auch IncomingCall-Zeilen mit Präfix erkennen; z.B. bei
	Fritz!Box 7170 (Dank an SatBandit)

2006-01-21

	* messages.sh: dreammessage ist über die Umgebungsvariablen
	DREAM_TIMEOUT, DREAM_CAPTION und DREAM_ICON weiter parametrisierbar

	* callmonitor: "E:" als Präfix beim Quellmuster passt nur beim Ende
	eines Anrufs; das ist nützlich für das Ausführen von Aktionen per
	Telefoncode (auch wenn inkrementell gewählt!). Achtung: Keine Nummern
	mit unerwünschten Nebenwirkungen verwenden. (Unterscheidung NT/nicht
	NT ist nicht möglich.)

2006-01-22
	
	callmonitor-0.6 veröffentlicht

2006-01-23
	
	* phonebook: Fehlgeschlagene Rückwärtssuche trug ein Semikolon in die
	Callers ein.

	* callmonitor: Ausgeführte Aktionen in Syslog eintragen

